Update assignment manager